--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@designliquido/delegua": "^0.33.15"
     },
     "devDependencies": {
+        "@types/estree": "^1.0.5",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.17",
         "copyfiles": "^2.4.1",
